--- a/index.html
+++ b/index.html
@@ -267,7 +267,9 @@
           <ul>
             <li><a href="/">Home</a></li>
             <li><a href="/">About</a></li>
-            <li><a href="/">Services</a></li>
+
+            <!--<li><a href="/">Services</a></li>-->
+            
             <li><a href="/">Projects</a></li>
             <li><a href="/">Contact</a></li>
           </ul>
